# kubeware

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  config.toml  deployment-minikube.yml  deployment-podinfo.yml
.github/workflows/: docker.yml  dockerimage.yml  dockerpublish.yml  release.yml  test.yml
examples/authn/: README.md  kubernetes.yml  middleware.js  package.json  server.js
examples/mirror/: README.md  kubernetes.yml  middleware.js  mirror.js  package.json  server.js
examples/transform/: README.md  kubernetes.yml  middleware.js  package.json  server.js
proto/: service.proto
src/: config.rs  container_handler.rs  kubeware_service.rs  main.rs  middleware.rs  middlewares.rs  request_container.rs  request_handler.rs  services.rs  tower_service.rs
src/integration_tests/: basic_tests.rs  mod.rs  request_tests.rs  response_tests.rs  timeout_tests.rs  tower_service.rs
